--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -85,7 +85,7 @@
 {% endmacro %}
 
 {% macro horizontalList(productViews, productHeadingTagName, type, showButton = false, onlyRefresh = false) %}
-    <div class="list-products-slider js-horizontal-list" data-type="{{ type }}" data-count-of-product="{{ productViews|length }}">
+    <div class="list-products-slider {% if showButton %}list-products-slider--with-button{% endif %} js-horizontal-list" data-type="{{ type }}" data-count-of-product="{{ productViews|length }}">
 
         <span class="list-products-slider__arrow list-products-slider__arrow--prev js-horizontal-list-action-prev">
             <i class="svg svg-slider-arrow"></i>
