--- a/src/Resources/styles/front/common/components/box/products-slider.less
+++ b/src/Resources/styles/front/common/components/box/products-slider.less
@@ -1,5 +1,4 @@
 .box-products-slider {
-    margin-bottom: 20px;
     text-align: center;
 
     @media @query-lg {
@@ -7,11 +6,18 @@
     }
 
     &__title {
-        margin-bottom: 0;
-        line-height: 54px;
+        margin-bottom: 10px;
+        line-height: 36px;
 
-        font-size: 36px;
+        font-size: 30px;
         color: @color-primary;
+
+        @media @query-lg {
+            line-height: 54px;
+            margin-bottom: 0;
+
+            font-size: 36px;
+        }
     }
 
     &__subtitle {
