[TF-14] Fix editing product with Product Groups (action sets) in admin

--- a/templates/bundles/ShopsysFrameworkBundle/Admin/Form/theme.html.twig
+++ b/templates/bundles/ShopsysFrameworkBundle/Admin/Form/theme.html.twig
@@ -126,7 +126,7 @@
 {%- endblock %}
 
 {% block product_group_items_list_widget %}
-    {% if form.vars.products is not empty %}
+    {% if form.vars.product_group_items is not empty %}
         <table class="table-form">
             <thead>
             <tr class="table-form__row">
@@ -135,16 +135,16 @@
             </tr>
             </thead>
             <tbody>
-            {% for product in form.vars.products %}
-                {% if product is not null %}
+            {% for product_item in form.vars.product_group_items %}
+                {% if product_item is not null %}
                 <tr class="table-form__row">
                     <td class="table-form__cell">
-                        <a href="{{ url('admin_product_edit', {id: product.item.id}) }}" target="_blank" class="btn-link-style btn-link-style--iconic-l">
-                            <span>{{ product.item|productListDisplayName }}</span>&nbsp;<i class="svg svg-forward-page"></i>
+                        <a href="{{ url('admin_product_edit', {id: product_item.item.id}) }}" target="_blank" class="btn-link-style btn-link-style--iconic-l">
+                            <span>{{ product_item.item|productListDisplayName }}</span>&nbsp;<i class="svg svg-forward-page"></i>
                         </a>
                     </td>
                     <td class="table-form__cell">
-                        {{ product.item_count }}
+                        {{ product_item.item_count }}
                     </td>
                 </tr>
                 {% endif %}
