design: edit style for sliders

--- a/assets/styles/frontend/common/components/in/add-to-cart.less
+++ b/assets/styles/frontend/common/components/in/add-to-cart.less
@@ -37,6 +37,10 @@
         font-weight: 700;
         box-shadow: none;
 
+        &--small {
+            font-size: 12px;
+        }
+
         .in-add-to-cart--small & {
             padding: 0 @in-add-to-cart-button-padding / 2;
             margin: 0 auto;
