--- a/src/Resources/styles/front/common/components/list/products-slider.less
+++ b/src/Resources/styles/front/common/components/list/products-slider.less
@@ -40,6 +40,7 @@
     }
 
     .slick-dots {
+        display: none;
         .reset-ul();
         position: absolute;
         left: 50%;
@@ -47,6 +48,10 @@
         transform: translateX(-50%);
         display: flex;
         margin-left: -@list-products-slider-dots-item-gap;
+
+        @media @query-md {
+            display: flex;
+        }
 
         li {
             margin-left: @list-products-slider-dots-item-gap;
