--- a/templates/Front/Inline/Cart/productAction.html.twig
+++ b/templates/Front/Inline/Cart/productAction.html.twig
@@ -39,8 +39,11 @@
             {% set hardDisabled = 1 %}
         {% endif %}
 
-        {{ form_widget(form.add, {label: 'Přidat do košíku'|trans, attr: {class: cssClass ~ 'in-add-to-cart__button btn-no-style', disabled: outOfStock, 'data-hard-disabled': hardDisabled }}) }}
-
+        {% if type == "slider"%}
+            {{ form_widget(form.add, {label: 'Přidat do košíku'|trans, attr: {class: cssClass ~ 'in-add-to-cart__button in-add-to-cart__button--small btn-no-style', disabled: outOfStock, 'data-hard-disabled': hardDisabled }}) }}
+        {% else %}
+            {{ form_widget(form.add, {label: 'Přidat do košíku'|trans, attr: {class: cssClass ~ 'in-add-to-cart__button btn-no-style', disabled: outOfStock, 'data-hard-disabled': hardDisabled }}) }}
+        {% endif %}
     </div>
     {{ form_end(form) }}
 {% endif %}
