--- a/assets/styles/frontend/common/components/in/availability.less
+++ b/assets/styles/frontend/common/components/in/availability.less
@@ -1,4 +1,5 @@
 @in-availability-stores-height: 18px;
+@in-availability-icon-size: 16px;
 
 .in-availability {
     margin-bottom: 10px;
@@ -66,10 +67,26 @@
     }
 
     &__status {
+        display: flex;
+        align-items: center;
         padding-right: 5px;
 
         font-size: @font-size-big;
         white-space: nowrap;
+
+        &__icon {
+            display: flex;
+            margin-right: 5px;
+            width: @in-availability-icon-size;
+            height: @in-availability-icon-size;
+
+            font-size: @in-availability-icon-size;
+            color: @color-add;
+
+            .svg {
+                height: @in-availability-icon-size;
+            }
+        }
     }
 
     &__date {
