--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -1,85 +1,173 @@
 {% macro list(productViews, listCssClass, productHeadingTagName) %}
     <ul class="list-products js-list js-product-list {{ listCssClass|default('') }}">
         {% for productView in productViews %}
-            <li class="list-products__item
-                js-list-products-item">
-                <div class="list-products__item__in">
-                    {% set productSellingPrice = productView.sellingPrice %}
-                    <div class="list-products__item__block">
-                        <a href="{{ productView.action.detailUrl }}" class="list-products__item__image-wrap">
-                            <div class="list-products__item__image dont-print">
-                                {{ image(productView.image, { size: 'list', alt: productView.name, lazy: true }) }}
-                                {% set productFlagIds = productView.flagIds %}
-                                {% set freeTransportAndPaymentFlagId = getFreeTransportAndPaymentFlagIdIfShouldBeDisplayed(productView) %}
-                                {% if freeTransportAndPaymentFlagId is not null %}
-                                    {% set productFlagIds = { 0: freeTransportAndPaymentFlagId } %}
-                                {% endif %}
-                            </div>
+            {% if productView.groupItems is not empty %}
+                <li class="list-products__item list-products__item__set">
+                    <div>
+                        <a class="list-products__item__info__link" href="{{ productView.action.detailUrl }}">
+                            <{{ productHeadingTagName|default('h2') }} class="list-products__item__info__title">
+                                {{ productView.name|striptags|raw }}
+                            <{{ '/' ~ productHeadingTagName|default('h2') }}>
+
+                            {% set productFlagIds = productView.flagIds %}
+                            {% set freeTransportAndPaymentFlagId = getFreeTransportAndPaymentFlagIdIfShouldBeDisplayed(productView) %}
+                            {% if freeTransportAndPaymentFlagId is not null %}
+                                {% set productFlagIds = { 0: freeTransportAndPaymentFlagId } %}
+                            {% endif %}
                             {{ renderFlagsByIds(productFlagIds, 'in-flag--product-list', false, productSellingPrice, productView.variantsCount) }}
                         </a>
-                        <div class="list-products__item__info">
-                            <a class="list-products__item__info__link" href="{{ productView.action.detailUrl }}">
-                                <{{ productHeadingTagName|default('h2') }} class="list-products__item__info__title">
-                                    {{ productView.name|striptags|raw }}
-                                <{{ '/' ~ productHeadingTagName|default('h2') }}>
+                    </div>
+                    <div class="list-products__item__group js-horizontal-list" data-type="basket-additionals" data-count-of-product="{{ productView.groupItems|length }}">
+                        {% for groupItem in productView.groupItems %}
+                            <div class="list-products__item__group__item">
+                                <div class="list-products__item__image">
+{#                                    {{ image(groupItem.image, {size: 'list', alt: groupItem.name, lazy: true}) }}#}
+                                </div>
+                                <div class="list-products__item__info">
+                                    <h3 class="list-products__item__info__title">
+                                        {{ groupItem.name }}
+                                    </h3>
+                                </div>
+                            </div>
+                            <div class="svg svg-plus"></div>
+                        {% endfor %}
+                    </div>
+                    <div class="list-products__item__info">
+                        {% set productSellingPrice = productView.sellingPrice %}
 
-                                {% if productSellingPrice is not null %}
-                                    <div class="list-products__item__info__price">
-                                        {% if productSellingPrice.hasHigherStandardPrice %}
-                                            <div class="list-products__item__info__price__old">
-                                                {{ productSellingPrice.standardPrice.priceWithVat|price }}
-                                            </div>
-                                        {% endif %}
-                                        <div {% if productSellingPrice.hasHigherStandardPrice %}class="list-products__item__info__price__main"{% endif %}>
-                                            {% if productSellingPrice.priceFrom %}
-                                                {{ 'from %price%'|trans({'%price%': productSellingPrice.priceWithVat|price}) }}
-                                            {% else %}
-                                                {{ productSellingPrice.priceWithVat|price }}
-                                            {% endif %}
-                                        </div>
+                        {% if productSellingPrice is not null %}
+                            <div class="list-products__item__info__price">
+                                {% if productSellingPrice.hasHigherStandardPrice %}
+                                    <div class="list-products__item__info__price__old">
+                                        {{ productSellingPrice.standardPrice.priceWithVat|price }}
                                     </div>
                                 {% endif %}
-
-                                <div class="in-availability">
-                                    {% if productView.action.sellingDenied %}
-                                        <div class="in-availability__text in-availability__text--out-of-stock">
-                                            {{ 'Product no longer on sale'|trans }}
-                                        </div>
+                                <div {% if productSellingPrice.hasHigherStandardPrice %}class="list-products__item__info__price__main"{% endif %}>
+                                    {% if productSellingPrice.priceFrom %}
+                                        {{ 'from %price%'|trans({'%price%': productSellingPrice.priceWithVat|price}) }}
                                     {% else %}
-                                        <div class="in-availability__text" style="color: {{ getAvailabilityColor(productView.availability) }};">
-                                            {% if productView.action.isMainVariant %}
-                                                {{ 'Dostupnost dle varianty'|trans }}
+                                        {{ productSellingPrice.priceWithVat|price }}
+                                    {% endif %}
+                                </div>
+                            </div>
+                        {% endif %}
+
+                        <div class="in-availability">
+                            {% if productView.action.sellingDenied %}
+                                <div class="in-availability__text in-availability__text--out-of-stock">
+                                    {{ 'Product no longer on sale'|trans }}
+                                </div>
+                            {% else %}
+                                <div class="in-availability__text" style="color: {{ getAvailabilityColor(productView.availability) }};">
+                                    {% if productView.action.isMainVariant %}
+                                        {{ 'Dostupnost dle varianty'|trans }}
+                                    {% else %}
+                                        {{ productView.availability }}
+                                    {% endif %}
+                                </div>
+                            {% endif %}
+                        </div>
+
+                        {% if productView.getGiftsCount() > 0 %}
+                            <div class="list-products__item__info__gift">
+                                {% set giftCount = productView.getGiftsCount() %}
+                                {% if giftCount is same as (1) %}
+                                    <span class="list-products__item__info__gift__title">{{ 'Dárek'|trans }}</span>
+                                    {{ productView.getFirstGiftLabel() }}
+                                {% else %}
+                                    <span class="list-products__item__info__gift__count">
+                                        {% transchoice giftCount with {'%count%': giftCount} %}
+                                            [2,4] %count% dárky zdarma |[5,Inf] %count% dárků zdarma
+                                        {% endtranschoice %}
+                                    </span>
+                                {% endif %}
+                            </div>
+                        {% endif %}
+
+                        {{ render(controller('App\\Controller\\Front\\CartController:productActionAction', { listedProductView: productView, showAmountInput: false } )) }}
+                    </div>
+                </li>
+                {{ dump(productView) }}
+            {% else %}
+                <li class="list-products__item js-list-products-item">
+                    <div class="list-products__item__in">
+                        {% set productSellingPrice = productView.sellingPrice %}
+                        <div class="list-products__item__block">
+                            <a href="{{ productView.action.detailUrl }}" class="list-products__item__image-wrap">
+                                <div class="list-products__item__image dont-print">
+                                    {{ image(productView.image, { size: 'list', alt: productView.name, lazy: true }) }}
+                                    {% set productFlagIds = productView.flagIds %}
+                                    {% set freeTransportAndPaymentFlagId = getFreeTransportAndPaymentFlagIdIfShouldBeDisplayed(productView) %}
+                                    {% if freeTransportAndPaymentFlagId is not null %}
+                                        {% set productFlagIds = { 0: freeTransportAndPaymentFlagId } %}
+                                    {% endif %}
+                                    {{ renderFlagsByIds(productFlagIds, 'in-flag--product-list', false, productSellingPrice, productView.variantsCount) }}
+                                </div>
+                            </a>
+                            <div class="list-products__item__info">
+                                <a class="list-products__item__info__link" href="{{ productView.action.detailUrl }}">
+                                    <{{ productHeadingTagName|default('h2') }} class="list-products__item__info__title">
+                                        {{ productView.name|striptags|raw }}
+                                    <{{ '/' ~ productHeadingTagName|default('h2') }}>
+
+                                    {% if productSellingPrice is not null %}
+                                        <div class="list-products__item__info__price">
+                                            {% if productSellingPrice.hasHigherStandardPrice %}
+                                                <div class="list-products__item__info__price__old">
+                                                    {{ productSellingPrice.standardPrice.priceWithVat|price }}
+                                                </div>
+                                            {% endif %}
+                                            <div {% if productSellingPrice.hasHigherStandardPrice %}class="list-products__item__info__price__main"{% endif %}>
+                                                {% if productSellingPrice.priceFrom %}
+                                                    {{ 'from %price%'|trans({'%price%': productSellingPrice.priceWithVat|price}) }}
+                                                {% else %}
+                                                    {{ productSellingPrice.priceWithVat|price }}
+                                                {% endif %}
+                                            </div>
+                                        </div>
+                                    {% endif %}
+
+                                    <div class="in-availability">
+                                        {% if productView.action.sellingDenied %}
+                                            <div class="in-availability__text in-availability__text--out-of-stock">
+                                                {{ 'Product no longer on sale'|trans }}
+                                            </div>
+                                        {% else %}
+                                            <div class="in-availability__text" style="color: {{ getAvailabilityColor(productView.availability) }};">
+                                                {% if productView.action.isMainVariant %}
+                                                    {{ 'Dostupnost dle varianty'|trans }}
+                                                {% else %}
+                                                    {{ productView.availability }}
+                                                {% endif %}
+                                            </div>
+                                        {% endif %}
+                                    </div>
+
+                                    {% if productView.getGiftsCount() > 0 %}
+                                        <div class="list-products__item__info__gift">
+                                            {% if productView.getGiftsCount() is same as (1) %}
+                                                <span class="list-products__item__info__gift__title">{{ 'Dárek'|trans }}</span>
+                                                {{ productView.getFirstGiftLabel() }}
                                             {% else %}
-                                                {{ productView.availability }}
+                                                <span class="list-products__item__info__gift__count">
+                                                    {% set giftCount = productView.getGiftsCount() %}
+                                                    {% transchoice giftCount with {'%count%': giftCount} %}
+                                                        [2,4] %count% dárky zdarma | [5,Inf] %count% dárků zdarma
+                                                    {% endtranschoice %}
+                                                </span>
                                             {% endif %}
                                         </div>
                                     {% endif %}
+                                </a>
+
+                                <div class="list-products__item__hover">
+                                    {{ render(controller('App\\Controller\\Front\\CartController:productActionAction', { listedProductView: productView } )) }}
                                 </div>
-
-                                {% if productView.getGiftsCount() > 0 %}
-                                    <div class="list-products__item__info__gift">
-                                        {% if productView.getGiftsCount() is same as (1) %}
-                                            <span class="list-products__item__info__gift__title">{{ 'Dárek'|trans }}</span>
-                                            {{ productView.getFirstGiftLabel() }}
-                                        {% else %}
-                                            <span class="list-products__item__info__gift__count">
-                                                {% set giftCount = productView.getGiftsCount() %}
-                                                {% transchoice giftCount with {'%count%': giftCount} %}
-                                                    [2,4] %count% dárky zdarma | [5,Inf] %count% dárků zdarma
-                                                {% endtranschoice %}
-                                            </span>
-                                        {% endif %}
-                                    </div>
-                                {% endif %}
-                            </a>
-
-                            <div class="list-products__item__hover">
-                                {{ render(controller('App\\Controller\\Front\\CartController:productActionAction', { listedProductView: productView } )) }}
                             </div>
                         </div>
                     </div>
-                </div>
-            </li>
+                </li>
+            {% endif %}
         {% endfor %}
     </ul>
 {% endmacro %}
