--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -2,7 +2,7 @@
     <ul class="list-products js-list js-product-list {{ listCssClass|default('') }}">
         {% for productView in productViews %}
             {% if productView.groupItems is not empty %}
-                <li class="list-products__item list-products__item__set">
+                <li class="list-products__item__set">
                     <div>
                         <a class="list-products__item__info__link" href="{{ productView.action.detailUrl }}">
                             <{{ productHeadingTagName|default('h2') }} class="list-products__item__info__title">
@@ -18,19 +18,29 @@
                         </a>
                     </div>
                     <div class="list-products__item__group js-horizontal-list" data-type="basket-additionals" data-count-of-product="{{ productView.groupItems|length }}">
-                        {% for groupItem in productView.groupItems %}
-                            <div class="list-products__item__group__item">
-                                <div class="list-products__item__image">
-{#                                    {{ image(groupItem.image, {size: 'list', alt: groupItem.name, lazy: true}) }}#}
+                        <span class="js-horizontal-list-action-prev">
+                            <i class="svg svg-triangle"></i>
+                        </span>
+
+                        <div class="js-horizontal-list-slides">
+                            {% for groupItem in productView.groupItems %}
+                                <div class="list-products__item__group__item" role="option">
+                                    <div class="list-products__item__image">
+    {#                                    {{ image(groupItem.image, {size: 'list', alt: groupItem.name, lazy: true}) }}#}
+                                    </div>
+                                    <div class="list-products__item__info">
+                                        <h3 class="list-products__item__info__title">
+                                            {{ groupItem.name }}
+                                        </h3>
+                                    </div>
+                                    <div class="svg svg-plus position-relative"></div>
                                 </div>
-                                <div class="list-products__item__info">
-                                    <h3 class="list-products__item__info__title">
-                                        {{ groupItem.name }}
-                                    </h3>
-                                </div>
-                            </div>
-                            <div class="svg svg-plus"></div>
-                        {% endfor %}
+                            {% endfor %}
+                        </div>
+
+                        <span class="js-horizontal-list-action-next">
+                            <i class="svg svg-triangle"></i>
+                        </span>
                     </div>
                     <div class="list-products__item__info">
                         {% set productSellingPrice = productView.sellingPrice %}
@@ -87,7 +97,6 @@
                         {{ render(controller('App\\Controller\\Front\\CartController:productActionAction', { listedProductView: productView, showAmountInput: false } )) }}
                     </div>
                 </li>
-                {{ dump(productView) }}
             {% else %}
                 <li class="list-products__item js-list-products-item">
                     <div class="list-products__item__in">
