--- a/templates/Front/Content/Category/hoverMenu.html.twig
+++ b/templates/Front/Content/Category/hoverMenu.html.twig
@@ -2,54 +2,65 @@
     {% if categoriesWithLazyLoadedVisibleChildren|length > 0 %}
         <ul class="{% if not children %}list-menu{% else %}list-menu__submenu{% endif %} {{ modificationClass }}">
             {% for categoryWithLazyLoadedVisibleChildren in categoriesWithLazyLoadedVisibleChildren %}
-                {% set category = categoryWithLazyLoadedVisibleChildren.category %}
-                {% set hasChildren = categoryWithLazyLoadedVisibleChildren.hasChildren %}
-                {% if category.level == 1 %}
-                    <li class="list-menu__item list-menu__item--main {% if hasChildren and dropdownMenu %}js-hover-intent{% endif %}">
-                        <div class="list-menu__item__select">
-                            <a href="{{ url('front_product_list', { id: category.id }) }}"
-                            class="list-menu__item__link{% if hasChildren %} list-menu__item__link--with-dropdown{% endif %} list-menu__item__link--level-{{ category.level }}">
-                                {{ category.name }}
-                                {% if hasChildren %}
-                                    <i class="list-menu__item__link__arrow svg svg-triangle"></i>
-                                {% endif %}
-                            </a>
-                        </div>
-                        {% if hasChildren %}
-                            <div class="list-menu__item__options">
-                                {{ _self.rightContent(categoryWithLazyLoadedVisibleChildren.children, '', false, showImage, true) }}
-                            </div>
-                        {% endif %}
-                    </li>
-                {% else %}
-                    {% if category.level < 3 or loop.index < 5 %}
-                        <li class="list-menu__submenu__item">
-                            {% if showImage %}
-                                <a class="list-menu__submenu__item__image" href="{{ url('front_product_list', { id: category.id }) }}">
-                                    {{ image(category, { alt: category.name, size: 'dropdown' }) }}
-                                </a>
-                            {% endif %}
-                            <div class="list-menu__submenu__item__content">
-                                <a href="{{ url('front_product_list', { id: category.id }) }}"
-                                class="list-menu__submenu__item__title">
-                                    {{ category.name }}
-                                </a>
-                                {% if hasChildren and category.level == 2 %}
-                                    {{ _self.rightContent(categoryWithLazyLoadedVisibleChildren.children, 'list-menu__submenu--children', false, false, true) }}
-                                {% endif %}
-                            </div>
-                        </li>
-                    {% elseif category.level == 3 and loop.index == 5 %}
-                        <li class="list-menu__submenu__item">
-                            <a class="list-menu__submenu__item__more" href="{{ url('front_product_list', { id: category.parent.id }) }}">
-                                {{ 'a další kategorie'|transchoice(loop.length - 4, {'count': loop.length}) }}
-                            </a>
-                        </li>
-                    {% endif %}
+                {% if not categoryWithLazyLoadedVisibleChildren.category.saleType %}
+                    {{ _self.mainCategory(categoryWithLazyLoadedVisibleChildren, dropdownMenu, showImage, loop.index, loop.length) }}
+                {% endif %}
+            {% endfor %}
+            {% for categoryWithLazyLoadedVisibleChildren in categoriesWithLazyLoadedVisibleChildren %}
+                {% if categoryWithLazyLoadedVisibleChildren.category.saleType %}
+                    {{ _self.mainCategory(categoryWithLazyLoadedVisibleChildren, dropdownMenu, showImage, loop.index, loop.length) }}
                 {% endif %}
             {% endfor %}
         </ul>
     {% endif %}
 {% endmacro %}
 
-{{ _self.rightContent(categoriesWithLazyLoadedVisibleChildren, '',dropdownMenu, showImage, children) }}
+{% macro mainCategory(categoryWithLazyLoadedVisibleChildren, dropdownMenu, showImage, loopIndex, loopLength) %}
+    {% set category = categoryWithLazyLoadedVisibleChildren.category %}
+    {% set hasChildren = category.hasChildren %}
+    {% if category.level == 1 %}
+        <li class="list-menu__item list-menu__item--main {% if hasChildren and dropdownMenu %}js-hover-intent{% endif %}">
+            <div class="list-menu__item__select">
+                <a href="{{ url('front_product_list', { id: category.id }) }}"
+                   class="list-menu__item__link{% if hasChildren %} list-menu__item__link--with-dropdown{% endif %} list-menu__item__link--level-{{ category.level }}">
+                    {{ category.name }}
+                    {% if hasChildren %}
+                        <i class="list-menu__item__link__arrow svg svg-triangle"></i>
+                    {% endif %}
+                </a>
+            </div>
+            {% if hasChildren %}
+                <div class="list-menu__item__options">
+                    {{ _self.rightContent(categoryWithLazyLoadedVisibleChildren.children, '', false, showImage, true) }}
+                </div>
+            {% endif %}
+        </li>
+    {% else %}
+        {% if category.level < 3 or loopIndex < 5 %}
+            <li class="list-menu__submenu__item">
+                {% if showImage %}
+                    <a class="list-menu__submenu__item__image" href="{{ url('front_product_list', { id: category.id }) }}">
+                        {{ image(category, { alt: category.name, size: 'dropdown' }) }}
+                    </a>
+                {% endif %}
+                <div class="list-menu__submenu__item__content">
+                    <a href="{{ url('front_product_list', { id: category.id }) }}"
+                       class="list-menu__submenu__item__title">
+                        {{ category.name }}
+                    </a>
+                    {% if hasChildren and category.level == 2 %}
+                        {{ _self.rightContent(categoryWithLazyLoadedVisibleChildren.children, 'list-menu__submenu--children', false, false, true) }}
+                    {% endif %}
+                </div>
+            </li>
+        {% elseif category.level == 3 and loopIndex == 5 %}
+            <li class="list-menu__submenu__item">
+                <a class="list-menu__submenu__item__more" href="{{ url('front_product_list', { id: category.parent.id }) }}">
+                    {{ 'a další kategorie'|transchoice(loopLength - 4, {'count': loopLength}) }}
+                </a>
+            </li>
+        {% endif %}
+    {% endif %}
+{% endmacro %}
+
+{{ _self.rightContent(categoriesWithLazyLoadedVisibleChildren, '', dropdownMenu, showImage, children) }}
