Added images to listed group items. Order now substracts stock quantities of all products in product group. Stock quantity of product group is calculated from internal and external stock quantities of products in that group.

--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -1,4 +1,4 @@
-{% macro productBox(product, productMainCategory, visible, youtubeDetails, productSizeArticleId, loyaltyProgramArticle, accessories, accessoriesHeadline, productVisibleProductCategoryDomains, registrationDiscountExclusionText, promoDiscountExclusionText, allDiscountExclusionText, productGroups) %}
+{% macro productBox(product, productMainCategory, visible, youtubeDetails, productSizeArticleId, loyaltyProgramArticle, accessories, accessoriesHeadline, productVisibleProductCategoryDomains, registrationDiscountExclusionText, promoDiscountExclusionText, allDiscountExclusionText) %}
     {% import _self as self %}
     {% import 'Front/Inline/Product/productFlagsMacro.html.twig' as productFlags %}
     {% import 'Front/Content/Product/boxTabs.html.twig' as boxTabs %}
@@ -207,7 +207,7 @@
             {% import 'Front/Content/Product/deliveryDateMacro.html.twig' as deliveryDate %}
 
             <div>
-                {% for productGroup in productGroups %}
+                {% for productGroup in product.productGroups %}
                     {% set productSellingPrice = getProductSellingPrice(productGroup.item) %}
                     <div>
                         <div class="item-image">
