--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -1,6 +1,7 @@
 {% macro list(productViews, listCssClass, productHeadingTagName) %}
     <ul class="list-products js-list js-product-list {{ listCssClass|default('') }}">
         {% for productView in productViews %}
+            {% set productSellingPrice = productView.sellingPrice %}
             {% if productView.groupItems is not empty %}
                 <li class="list-products__item__set">
                     <div>
@@ -26,7 +27,7 @@
                             {% for groupItem in productView.groupItems %}
                                 <div class="list-products__item__group__item" role="option">
                                     <div class="list-products__item__image">
-    {#                                    {{ image(groupItem.image, {size: 'list', alt: groupItem.name, lazy: true}) }}#}
+                                        {{ image(groupItem.image, {size: 'list', alt: groupItem.name, lazy: true}) }}
                                     </div>
                                     <div class="list-products__item__info">
                                         <h3 class="list-products__item__info__title">
@@ -43,8 +44,6 @@
                         </span>
                     </div>
                     <div class="list-products__item__info">
-                        {% set productSellingPrice = productView.sellingPrice %}
-
                         {% if productSellingPrice is not null %}
                             <div class="list-products__item__info__price">
                                 {% if productSellingPrice.hasHigherStandardPrice %}
