[TF-213] Show product availability depending on product stocks
+ exporting delivery days to elastic search

--- a/assets/styles/frontend/common/todo.less
+++ b/assets/styles/frontend/common/todo.less
@@ -88,3 +88,7 @@ button.active {
     text-transform: uppercase;
     font-weight: 700;
 }
+
+.in-availability__date--available-in-days {
+    color: #0077b3;
+}
