--- a/templates/Front/Content/Product/productAvailabilityMacro.html.twig
+++ b/templates/Front/Content/Product/productAvailabilityMacro.html.twig
@@ -1,21 +1,9 @@
 {% macro productAvailability(product) %}
-
-    {% set inStock = product.usingStock
-        and product.realStockQuantity > 0 %}
-
-    {% set showNotAvailable = product.usingStock
-        and product.realStockQuantity < 1
-        and not product.outOfStockAction is same as(constant('OUT_OF_STOCK_ACTION_SET_ALTERNATE_AVAILABILITY', product)) %}
-
-    {% if product.calculatedSellingDenied %}
-        <span class="in-availability__date in-availability__date--out-of-stock">{{ 'Product no longer on sale'|trans }}</span>
-    {% elseif inStock %}
-        <span class="in-availability__date">
-            {{ 'Skladem v e-shopu'|trans }}
-        </span>
-    {% elseif showNotAvailable %}
+    {% if product.isAvailableInDays %}
+        <span class="in-availability__date in-availability__date--available-in-days">{{ 'Dostupné do %days% dní'|trans({ '%days%': product.deliveryDays }) }}</span>
+    {% elseif product.isAvailable and not product.sellingDenied %}
+        <span class="in-availability__date in-availability__date--available">{{ 'Skladem v e-shopu'|trans }}</span>
+    {% elseif product.isCurrentlyOutOfStock or product.sellingDenied %}
         <span class="in-availability__date in-availability__date--not-available">{{ 'Momentálně nedostupné'|trans }}</span>
-    {% else %}
-        <span class="in-availability__date" style="color: {{ product.calculatedAvailability.rgbColor }}">{{ product.calculatedAvailability.name }}</span>
     {% endif %}
 {% endmacro %}
