--- a/templates/Front/Content/Product/productListMacro.html.twig
+++ b/templates/Front/Content/Product/productListMacro.html.twig
@@ -12,7 +12,7 @@
                             </a>
                         </div>
                         <div class="box-products-set__row box-products-set__row--without-gap">
-                            <div class="box-products-set__left">                        
+                            <div class="box-products-set__left">
                                 <div class="list-products-set js-horizontal-list" data-type="products-set" data-count-of-product="{{ productView.groupItems|length }}">
                                     <span class="list-products-set__arrow list-products-set__arrow--prev js-horizontal-list-action-prev">
                                         <i class="svg svg-slider-arrow"></i>
@@ -53,9 +53,9 @@
                                     {% if freeTransportAndPaymentFlagId is not null %}
                                         {% set productFlagIds = { 0: freeTransportAndPaymentFlagId } %}
                                     {% endif %}
-                                    
+
                                     {{ renderFlagsByIds(productFlagIds, 'in-flag--product-set', false, productSellingPrice, productView.variantsCount) }}
-                                    
+
                                     {% if productSellingPrice is not null %}
                                         <div class="box-products-set__info__prices">
                                             {% if productSellingPrice.hasHigherStandardPrice %}
@@ -150,19 +150,15 @@
                                     {% endif %}
 
                                     <div class="in-availability">
-                                        {% if productView.action.sellingDenied %}
-                                            <div class="in-availability__text in-availability__text--out-of-stock">
-                                                {{ 'Product no longer on sale'|trans }}
-                                            </div>
-                                        {% else %}
-                                            <div class="in-availability__text" style="color: {{ getAvailabilityColor(productView.availability) }};">
-                                                {% if productView.action.isMainVariant %}
-                                                    {{ 'Dostupnost dle varianty'|trans }}
-                                                {% else %}
-                                                    {{ productView.availability }}
-                                                {% endif %}
-                                            </div>
-                                        {% endif %}
+                                        <div class="in-availability__text" style="color: {{ getAvailabilityColor(productView.availability) }};">
+                                            {% if productView.action.isMainVariant %}
+                                                {{ 'Dostupnost dle varianty'|trans }}
+                                            {% elseif productView.isAvailableInDays %}
+                                                <span class="in-availability__date--available-in-days">{{ 'Dostupné do %days% dní'|trans({ '%days%': productView.deliveryDays }) }}</span>
+                                            {% else %}
+                                                {{ productView.availability }}
+                                            {% endif %}
+                                        </div>
                                     </div>
 
                                     {% if productView.getGiftsCount() > 0 %}
@@ -246,19 +242,15 @@
                                         {% endif %}
 
                                         <div class="in-availability">
-                                            {% if productView.action.sellingDenied %}
-                                                <div class="in-availability__text in-availability__text--out-of-stock">
-                                                    {{ 'Product no longer on sale'|trans }}
-                                                </div>
-                                            {% else %}
-                                                <div class="in-availability__text" style="color: {{ getAvailabilityColor(productView.availability) }};">
-                                                    {% if productView.action.isMainVariant %}
-                                                        {{ 'Dostupnost dle varianty'|trans }}
-                                                    {% else %}
-                                                        {{ productView.availability }}
-                                                    {% endif %}
-                                                </div>
-                                            {% endif %}
+                                            <div class="in-availability__text" style="color: {{ getAvailabilityColor(productView.availability) }};">
+                                                {% if productView.action.isMainVariant %}
+                                                    {{ 'Dostupnost dle varianty'|trans }}
+                                                {% elseif productView.deliveryDays is not null %}
+                                                    <span class="in-availability__date--available-in-days">{{ 'Dostupné do %days% dní'|trans({ '%days%': productView.deliveryDays }) }}</span>
+                                                {% else %}
+                                                    {{ productView.availability }}
+                                                {% endif %}
+                                            </div>
                                         </div>
                                     </a>
                                     {% if showButton %}
@@ -319,7 +311,13 @@
 
                                 <div class="list-last-visited__item__info__availability">
                                     <div class="list-last-visited__item__info__availability__text" style="color: {{ getAvailabilityColor(productView.availability) }};">
-                                        {{ productView.availability }}
+                                        {% if productView.action.isMainVariant %}
+                                            {{ 'Dostupnost dle varianty'|trans }}
+                                        {% elseif productView.deliveryDays is not null %}
+                                            <span class="in-availability__date--available-in-days">{{ 'Dostupné do %days% dní'|trans({ '%days%': productView.deliveryDays }) }}</span>
+                                        {% else %}
+                                            {{ productView.availability }}
+                                        {% endif %}
                                     </div>
                                 </div>
                             </div>
