--- a/templates/Front/Content/Cart/index.html.twig
+++ b/templates/Front/Content/Cart/index.html.twig
@@ -104,11 +104,16 @@
                                                         {{ 'Větší množství není možné nakoupit'|trans }}
                                                     </div>
                                                     <span class="form-input-spinbox js-spinbox">
+                                                        {% if cartItem.saleItem %}
+                                                            {% set maxQuantity = cartItem.product.realSaleStocksQuantity %}
+                                                        {% else %}
+                                                            {% set maxQuantity = cartItem.product.realNonSaleStocksQuantity %}
+                                                        {% endif %}
                                                         {{ form_widget(form.quantities[cartItem.id], { attr: {
                                                             class: 'form-input-spinbox__input input-no-style js-spinbox-input',
                                                             'data-spinbox-min': cartItem.product.realMinimumAmount,
                                                             'data-spinbox-step': cartItem.product.amountMultiplier,
-                                                            'data-spinbox-max': cartItem.product.realStockQuantity
+                                                            'data-spinbox-max': maxQuantity
                                                         }}) }}
                                                         <div class="btn-no-style form-input-spinbox__btn js-spinbox-plus"><i class="svg svg-plus"></i></div>
                                                         <div class="btn-no-style form-input-spinbox__btn form-input-spinbox__btn--minus js-spinbox-minus"><i class="svg svg-minus"></i></div>
